<resources>
    <string name="app_name">Nomspots</string>
    <string name="create_new_account">Create New Account</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="do_not_have_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="already_have_account_log_in">Already have an account? Log in.</string>
    <string name="logo">logo</string>
    <string name="nomspots">nomspots</string>
    <string name="email">Email</string>
    <string name="login_status">Incorrect email and password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon</string>
</resources>