<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        tools:context=".auth.AuthActivity">

        <TextView
            android:id="@+id/tv_nomspots"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/timmana"
            android:includeFontPadding="false"
            android:text="@string/nomspots"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="46sp" />

        <ImageView
            android:id="@+id/ivSignUpLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/tv_nomspots"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/logo"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiUsernameSignUp"
            style="@style/AuthTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivSignUpLogo"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmailSignUp"
            style="@style/AuthTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tiUsernameSignUp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/textPrimaryLight"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPasswordSignUp"
            style="@style/AuthTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tiEmailSignUp"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCreateNewAccountSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tiPasswordSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:height="60dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/create_new_account"
            android:textColor="@color/textSecondaryLight"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnCreateNewAccountSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:backgroundTint="#00FBFBFB"
            android:padding="10dp"
            android:text="@string/already_have_account_log_in"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            tools:text="@string/already_have_account_log_in" />

    </RelativeLayout>
</layout>
